groupmedynamic_updates: Updated

--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -176,21 +176,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Quarterstaff: The Tomb of Setmoth', 'summary': ['Quarterstaff: The Tomb of Setmoth', 'this/they/it, this/they/it is an interactive fiction role-playing video game developed by scott schmitz and ken updike and released by infocom for macintosh in 1988. --- game features a text parser, graphics, a dynamically updated map, and a graphical interface that incorporates mac os hierarchical menus.'], 'related': 98}\n"
+      "{'title': 'The Yukon Trail', 'summary': ['The Yukon Trail', 'this/they/it, this/they/it is a 1994 educational computer game from --- minnesota educational computing consortium mecc, similar to their previous oregon --- series but set during --- klondike gold rush of --- late 19th century. players start out in seattle and must make decisions concerning supplies, a partner, and travel plans as they head to alaska before boating down a river to dawson city and staking a claim to mine for gold. --- game features --- famous author jack london and authentic 19th-century photographs that show what life was like back then.'], 'related': 65}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 58%|█████▊    | 3005/5167 [01:24<01:00, 35.83it/s]"
+      "100%|██████████| 4761/4761 [02:19<00:00, 34.23it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
