--- a/clue_hider.ipynb
+++ b/clue_hider.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5167/5167 [00:01<00:00, 3235.58it/s]\n"
+      "100%|██████████| 5731/5731 [00:01<00:00, 3416.17it/s]\n"
      ]
     }
    ],
@@ -45,12 +45,21 @@
     "    string_to_replace_with = \"This/They/It\"\n",
     "    string_to_search = card['summary'][1]\n",
     "    card['summary'][1] = re.sub(regex_pattern, string_to_replace_with, string_to_search, flags=re.IGNORECASE)\n",
+    "    # also use regex to find \"\\n\\n\" or \"\\n\" and replace with a space. \n",
+    "    regex_pattern = r\"\\n\\n\"\n",
+    "    string_to_replace_with = \" \"\n",
+    "    string_to_search = card['summary'][1]\n",
+    "    card['summary'][1] = re.sub(regex_pattern, string_to_replace_with, string_to_search, flags=re.IGNORECASE)\n",
+    "    regex_pattern = r\"\\n\"\n",
+    "    string_to_replace_with = \" \"\n",
+    "    string_to_search = card['summary'][1]\n",
+    "    card['summary'][1] = re.sub(regex_pattern, string_to_replace_with, string_to_search, flags=re.IGNORECASE)\n",
     "\n",
     "\n",
     "    # now split the title of the card into a list of words, and remove any stopwords from the list of words using nltk stopwords\n",
     "    stopwords = nltk.corpus.stopwords.words('english')\n",
     "    card_title_words = card_title.split()\n",
-    "    card_title_words = [word for word in card_title_words if word not in stopwords]\n",
+    "    card_title_words = [word for word in card_title_words if word not in stopwords or word == \"the\"]\n",
     "    # now we have a list of words that are in the title of the card, but not stopwords. (i.e. Hobbit, Eragon, etc.)\n",
     "    # if these words appear in the card summary, we want to hide them in the summary by replacing them with the phrase \"clue_hider\" (or something similar)\n",
     "    # we can use the re.sub() function to replace the words in the card title with the phrase \"clue_hider\" in the summary phrase.\n",
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +90,7 @@
      "output_type": "stream",
      "text": [
       "Climate change and cities\n",
-      "this/they/it are deeply connected. --- are one of the greatest contributors and likely best opportunities for addressing --- ---. --- are also one of the most vulnerable parts of the human society to the effects of --- ---, and likely one of the most important solutions for reducing the environmental impact of humans. more than half of the worlds population is in ---, consuming a large portion of food and goods produced outside of ---. the increase of urban population growth is one of the main factors in air-quality problems. in the year 2016, 31 mega---- reported having at least 10 million in their population, 8 of which surrear endd 20 million people. the un projects that 68% of the world population will live in urban areas by 2050. hence, --- have a significant influence on construction and transportationtwo of the key contributors to global warming emissions. moreover, because of processes that create --- conflict and --- refugees, city areas are expected to grow during the next several decades, stressing infrastructure and concentrating more impoverished peoples in ---.because of the high density and effects like the urban heat island affect, weather changes due to --- --- are likely to greatly effect ---, exacerbating existing problems, such as air pollution, water scarcity, and heat illness in the metropolitan areas. studies have shown that if body temperature exceeds 39c for a period of time, serious heat stroke may occur. some of the other extreme weather conditions caused by --- --- include extreme floods, deathly snowstorms, ice storms, heat waves, droughts, and hurricanes, which are often deathly and harmful. studies have shown that heat waves are three times more likely to occur and have become more intense since the 1960s. moreover, because most --- have been built on rivers or coastal areas, --- are frequently vulnerable to the subsequent effects of sea level rise, which cause coastal flooding and erosion, and those effects are deeply connected with other urban environmental problems, like subsidence and aquifer depletion.\n",
-      "a report by the c40 --- --- leadership group described consumption based emissions as having significantly more impact than production-based emissions within ---. the report estimates that 85% of the emissions associated with goods within a city is generated outside of that city. --- --- adaptation and mitigation investments in --- will be important in reducing the impacts of some of the largest contributors of greenhouse gas emissions: for example, increased density allows for redistribution of land use for agriculture and reforestation, improving transportation efficiencies, and greening construction largely due to cements outsized role in --- --- and improvements in sustainable construction practices and weatherization.in the most recent past, increasing urbanization has also been proposed as a phenomenon that has a reducing effect on the global rate of carbon emission primarily because with urbanization comes technical prowess which can help drive sustainability. lists of high impact --- --- solutions tend to include city-focused solutions; for example, project drawdown recommends several major urban investments, including improved bicycle infrastructure, building retrofitting, district heating, public transit, and walkable --- as important solutions.because of this, the international community has formed coalitions of --- such as the c40 --- --- leadership group and iclei and policy goals, such as sustainable development goal 11 sustainable --- and communities, to activate and focus attention on these solutions.\n",
+      "this/they/it are deeply connected. --- are one of the greatest contributors and likely best opportunities for addressing --- ---. --- are also one of the most vulnerable parts of the human society to the effects of --- ---, and likely one of the most important solutions for reducing the environmental impact of humans. more than half of the worlds population is in ---, consuming a large portion of food and goods produced outside of ---. the increase of urban population growth is one of the main factors in air-quality problems. in the year 2016, 31 mega---- reported having at least 10 million in their population, 8 of which surrear endd 20 million people. the un projects that 68% of the world population will live in urban areas by 2050. hence, --- have a significant influence on construction and transportationtwo of the key contributors to global warming emissions. moreover, because of processes that create --- conflict and --- refugees, city areas are expected to grow during the next several decades, stressing infrastructure and concentrating more impoverished peoples in ---.because of the high density and effects like the urban heat island affect, weather changes due to --- --- are likely to greatly effect ---, exacerbating existing problems, such as air pollution, water scarcity, and heat illness in the metropolitan areas. studies have shown that if body temperature exceeds 39c for a period of time, serious heat stroke may occur. some of the other extreme weather conditions caused by --- --- include extreme floods, deathly snowstorms, ice storms, heat waves, droughts, and hurricanes, which are often deathly and harmful. studies have shown that heat waves are three times more likely to occur and have become more intense since the 1960s. moreover, because most --- have been built on rivers or coastal areas, --- are frequently vulnerable to the subsequent effects of sea level rise, which cause coastal flooding and erosion, and those effects are deeply connected with other urban environmental problems, like subsidence and aquifer depletion. a report by the c40 --- --- leadership group described consumption based emissions as having significantly more impact than production-based emissions within ---. the report estimates that 85% of the emissions associated with goods within a city is generated outside of that city. --- --- adaptation and mitigation investments in --- will be important in reducing the impacts of some of the largest contributors of greenhouse gas emissions: for example, increased density allows for redistribution of land use for agriculture and reforestation, improving transportation efficiencies, and greening construction largely due to cements outsized role in --- --- and improvements in sustainable construction practices and weatherization.in the most recent past, increasing urbanization has also been proposed as a phenomenon that has a reducing effect on the global rate of carbon emission primarily because with urbanization comes technical prowess which can help drive sustainability. lists of high impact --- --- solutions tend to include city-focused solutions; for example, project drawdown recommends several major urban investments, including improved bicycle infrastructure, building retrofitting, district heating, public transit, and walkable --- as important solutions.because of this, the international community has formed coalitions of --- such as the c40 --- --- leadership group and iclei and policy goals, such as sustainable development goal 11 sustainable --- and communities, to activate and focus attention on these solutions.\n",
       "\n",
       "Rosetta Cammeniti\n",
       "this/they/it, --- rosie --- is a fictional character from the australian soap opera neighbours, played by natalie saleeba. the character was introduced into the serial as part of a group of four 20 somethings. saleeba began filming in july and she made her first on-screen appearance on 12 october 2006. rosettas storylines included an arranged marriage, a same-sex kiss and pseudocyesis. she departed on 25 april 2008.\n",
@@ -91,7 +99,7 @@
       "this/they/it, this/they/it is an action video game, part of the muppets franchise and released in 2003 made for microsoft windows and game boy advance by vicarious visions and published by tdk mediactive. it is a spoof of the james bond films, the title being a reference to licence to kill. the player controls kermit the frog through several stages in order to stop the bad guys.\n",
       "\n",
       "Fame in the 20th Century\n",
-      "this/they/it, this/they/it is a 1993 bbc documentary television series and book by clive james. the book and series examined the phenomenon of --- and how it expanded to international mass media proportions throughout the --- ---. the series first aired starting in january 1993, with 8 episodes divided in roughly 8 decades, from the 1900s to the 1980s. each episode highlighted world-famous people during that part of the ---. james delivered interesting and amusing comments about the portrayed celebrities and the various ways they became famous.\\nin the united states, the series were broadcast on pbs and in australia on abc, though some footage was occasionally cut if the rights to it were too expensive. the series has never been repeated on television since, which james attributes to the fact that every inch of footage in the gigantic compilation belonged to some agency legally equipped to charge the earth. he further points out that the book contains the text almost exactly as i read it out on screen. but i took care even at the time to write it as if it might have to survive on its own.\\n\\n\n",
+      "this/they/it, this/they/it is a 1993 bbc documentary television series and book by clive james. --- book and series examined --- phenomenon of --- and how it expanded to international mass media proportions throughout --- --- ---. --- series first aired starting in january 1993, with 8 episodes divided in roughly 8 decades, from --- 1900s to --- 1980s. each episode highlighted world-famous people during that part of --- ---. james delivered interesting and amusing comments about --- portrayed celebrities and --- various ways they became famous.\\nin --- united states, --- series were broadcast on pbs and in australia on abc, though some footage was occasionally cut if --- rights to it were too expensive. --- series has never been repeated on television since, which james attributes to --- fact that every inch of footage in --- gigantic compilation belonged to some agency legally equipped to charge --- earth. he further points out that --- book contains --- text almost exactly as i read it out on screen. but i took care even at --- time to write it as if it might have to survive on its own.\\n\\n\n",
       "\n",
       "Becca Hayton\n",
       "this/they/it, --- dean also --- is a fictional character from the channel 4 soap opera hollyoaks, played by ali bastian. she first appeared on-screen on 19 september 2001 and departed on 16 february 2007.\n",
@@ -120,6 +128,30 @@
     "    print(card_deck[i]['title'])\n",
     "    print(card_deck[i]['summary'][1])\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 83%|████████▎ | 4761/5731 [00:00<00:00, 55773.01it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove cards with the word \"video game\" in the summary as there are too many of them\n",
+    "for card in tqdm(card_deck):\n",
+    "    if any(word in card['summary'][1] for word in ['video game', 'video-game', 'video games', 'video-games', ' manga ',' fuck ',' shit ']):\n",
+    "        card_deck.remove(card)\n",
+    "\n",
+    "# save the card_deck to a new file\n",
+    "with open(\"ppn_deck_cleaned_clues_hidden.json\", \"w\") as write_file:\n",
+    "    json.dump(card_deck, write_file, indent=4)"
    ]
   }
  ],
