better-summarization: Added

--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     "# read card_deck from ppn_deck.json file\n",
     "# with open(\"ppn_deck.json\", \"r\") as read_file:\n",
     "    # card_deck = json.load(read_file)\n",
-    "with open('ppn_deck_cleaned_clues_hidden.json', 'r') as read_file:\n",
+    "with open('ppn_deck.json', 'r') as read_file:\n",
     "    card_deck = json.load(read_file)\n",
     "\n",
     "# clear the card_images folder\n",
@@ -103,9 +103,9 @@
     "    draw = ImageDraw.Draw(image)\n",
     "    # the title is wrapped to 40 characters, so the height of the rectangle is the number of characters * 20 (the height of the font)\n",
     "    title_size = 20\n",
-    "    font_title = ImageFont.truetype('./fonts/Menlo.ttc', title_size)\n",
-    "    font_description = ImageFont.truetype('./fonts/Menlo.ttc', 20)\n",
-    "    font_points = ImageFont.truetype('./fonts/Menlo.ttc', 18)\n",
+    "    font_title = ImageFont.truetype('./fonts/SFNSMono.ttf', title_size)\n",
+    "    font_description = ImageFont.truetype('./fonts/SFNSMono.ttf', 20)\n",
+    "    font_points = ImageFont.truetype('./fonts/SFNSMono.ttf', 18)\n",
     "    title_wrapped = textwrap.wrap(title, width=40)\n",
     "    # draw the title centered horizontally, and 30 pixels from the top. The title is wrapped to 40 characters, so the height of the rectangle is the number of characters * 20 (the height of the font)\n",
     "\n",
@@ -166,7 +166,9 @@
     "            summary = ' '.join(summary)\n",
     "        # make the point value the number of unique words in the summary (unique to the card compared to other cards)\n",
     "        #?points = len(set(summary.split()) - set(stopwords.words('english'))) # all words not in the stopword list\n",
-    "        points = len(set(summary.split())) # all words\n",
+    "        # points = len(set(summary.split())) # all words\n",
+    "        # points should be point_value from the card dictionary\n",
+    "        points = card['point_value']\n",
     "        # generate the card\n",
     "        generate_card(str(card['title']), summary, points=points) # get_google_trends_score(card['title'])\n",
     "        #!print(f'Found a score of {get_google_trends_score(card[\"title\"])} for {card[\"title\"]}')\n",
@@ -176,35 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'The Yukon Trail', 'summary': ['The Yukon Trail', 'this/they/it, this/they/it is a 1994 educational computer game from --- minnesota educational computing consortium mecc, similar to their previous oregon --- series but set during --- klondike gold rush of --- late 19th century. players start out in seattle and must make decisions concerning supplies, a partner, and travel plans as they head to alaska before boating down a river to dawson city and staking a claim to mine for gold. --- game features --- famous author jack london and authentic 19th-century photographs that show what life was like back then.'], 'related': 65}\n"
+      "{'title': '...And Justice for All (film)', 'summary': '..And Justice for All film, .And Justice for All is a 1979 American legal comedy-drama film directed by Norman Jewison and starring Al Pacino, Jack Warden and John Forsythe. Lee Strasberg, Jeffrey Tambor, Christine Lahti, Craig T. Nelson and Thomas Waites appear in supporting roles. The Oscar-nominated screenplay was written by Valerie Curtin and Barry Levinson.\\\\nThe film includes a well-known scene in which Pacinos character yells, Youre out of order! Youre out of order! The whole trial is out of order! Theyre out of order! It was filmed in Baltimore, including the courthouse area. It received two Academy Award nominations: Best Leading Actor Pacino and Best Original Screenplay Curtin and Levinson.\\\\n\\\\n', 'related': 105, 'summary_short': '..And Justice for All film, .And Justice for All is a 1979 American legal comedy-drama film directed by Norman Jewison and starring Al Pacino, Jack Warden and John Forsythe. Lee Strasberg, Jeffrey Tambor, Christine Lahti, Craig T. Nelson and Thomas Waites appear in supporting roles. The Oscar-nominated screenplay was written by Valerie Curtin and Barry Levinson.\\\\nThe film includes a well-known scene in which Pacinos character yells, Youre out of order! Youre out of order! The whole trial is out of order! Theyre out of order! It was filmed in Baltimore, including the courthouse area. It received two Academy Award nominations: Best Leading Actor Pacino and Best Original Screenplay Curtin and Levinson.\\\\n\\\\n', 'summary_clean': nan, 'point_value': 1}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4761/4761 [02:19<00:00, 34.23it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 27%|██▋       | 1607/5951 [00:54<03:03, 23.67it/s]"
      ]
     }
    ],
