--- a/card_point_revision.ipynb
+++ b/card_point_revision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
+    "scaler = MinMaxScaler(feature_range=(0, 10))\n",
     "# read card_deck from ppn_deck.json file\n",
     "with open(\"ppn_deck.json\", \"r\") as read_file:\n",
     "    card_deck = json.load(read_file)\n",
@@ -58,8 +58,7 @@
     "        card_word_counts.append(word_count)\n",
     "        # Increment the card id\n",
     "        card_id += 1\n",
-    "    # Use MinMaxScaler to scale the word counts to a range of 1 to 100\n",
-    "    scaler = MinMaxScaler(feature_range=(1, int(max_points)))\n",
+    "    # Scale the word counts to be between 0 and 10\n",
     "    scaled_word_counts = scaler.fit_transform(pd.DataFrame(card_word_counts))\n",
     "    # Iterate through each card in the card deck\n",
     "    card_id = 0\n",
@@ -95,15 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5711/5711 [00:01<00:00, 3396.47it/s]\n",
-      "100%|██████████| 5711/5711 [00:00<00:00, 713182.78it/s]\n"
+      "100%|██████████| 5754/5754 [00:01<00:00, 4124.45it/s]\n",
+      "100%|██████████| 5754/5754 [00:00<00:00, 1723243.50it/s]\n"
      ]
     }
    ],
@@ -111,6 +110,304 @@
     "# revise point values\n",
     "card_deck = revise_point_values(card_deck,10)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>related</th>\n",
+       "      <th>summary_short</th>\n",
+       "      <th>summary_clean</th>\n",
+       "      <th>point_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Climate change and cities</td>\n",
+       "      <td>[Climate change and cities, Climate change and...</td>\n",
+       "      <td>401</td>\n",
+       "      <td>Moreover, because most cities have been built ...</td>\n",
+       "      <td>Moreover because of processes that create clim...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rosetta Cammeniti</td>\n",
+       "      <td>[Rosetta Cammeniti, Rosetta Cammeniti, Rosetta...</td>\n",
+       "      <td>321</td>\n",
+       "      <td>['Rosetta Cammeniti', 'Rosetta Cammeniti, Rose...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Spy Muppets: License to Croak</td>\n",
+       "      <td>[Spy Muppets: License to Croak, Spy Muppets: L...</td>\n",
+       "      <td>164</td>\n",
+       "      <td>['Spy Muppets: License to Croak', 'Spy Muppets...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fame in the 20th Century</td>\n",
+       "      <td>[Fame in the 20th Century, Fame in the 20th Ce...</td>\n",
+       "      <td>591</td>\n",
+       "      <td>['Fame in the 20th Century', 'Fame in the 20th...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Becca Hayton</td>\n",
+       "      <td>[Becca Hayton, Becca Hayton, Becca Dean also H...</td>\n",
+       "      <td>271</td>\n",
+       "      <td>['Becca Hayton', 'Becca Hayton, Becca Dean als...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           title  \\\n",
+       "0      Climate change and cities   \n",
+       "1              Rosetta Cammeniti   \n",
+       "2  Spy Muppets: License to Croak   \n",
+       "3       Fame in the 20th Century   \n",
+       "4                   Becca Hayton   \n",
+       "\n",
+       "                                             summary related  \\\n",
+       "0  [Climate change and cities, Climate change and...     401   \n",
+       "1  [Rosetta Cammeniti, Rosetta Cammeniti, Rosetta...     321   \n",
+       "2  [Spy Muppets: License to Croak, Spy Muppets: L...     164   \n",
+       "3  [Fame in the 20th Century, Fame in the 20th Ce...     591   \n",
+       "4  [Becca Hayton, Becca Hayton, Becca Dean also H...     271   \n",
+       "\n",
+       "                                       summary_short  \\\n",
+       "0  Moreover, because most cities have been built ...   \n",
+       "1  ['Rosetta Cammeniti', 'Rosetta Cammeniti, Rose...   \n",
+       "2  ['Spy Muppets: License to Croak', 'Spy Muppets...   \n",
+       "3  ['Fame in the 20th Century', 'Fame in the 20th...   \n",
+       "4  ['Becca Hayton', 'Becca Hayton, Becca Dean als...   \n",
+       "\n",
+       "                                       summary_clean  point_value  \n",
+       "0  Moreover because of processes that create clim...            4  \n",
+       "1                                                NaN            0  \n",
+       "2                                                NaN            0  \n",
+       "3                                                NaN            1  \n",
+       "4                                                NaN            0  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show an example with the revised point values\n",
+    "# convert to dataframe\n",
+    "df = pd.DataFrame(card_deck)\n",
+    "# show the first 5 rows\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the summary_short needs to always be the second element in the tuple if it is an instance of a tuple, else it is itself (str)\n",
+    "for card in card_deck:\n",
+    "    summary = card['summary']\n",
+    "    if isinstance(summary, tuple) or isinstance(summary, list):\n",
+    "        summary_short = summary[1]\n",
+    "    else:\n",
+    "        summary_short = summary\n",
+    "    card['summary_short'] = summary_short\n",
+    "    card['summary'] = summary_short\n",
+    "\n",
+    "df = pd.DataFrame(card_deck)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the point_value must always be a value from 1 to 10 never 0. Replace all 0's with 1's\n",
+    "df['point_value'] = df['point_value'].replace(0,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>related</th>\n",
+       "      <th>summary_short</th>\n",
+       "      <th>summary_clean</th>\n",
+       "      <th>point_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Climate change and cities</td>\n",
+       "      <td>Climate change and cities are deeply connected...</td>\n",
+       "      <td>401</td>\n",
+       "      <td>Climate change and cities are deeply connected...</td>\n",
+       "      <td>Moreover because of processes that create clim...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rosetta Cammeniti</td>\n",
+       "      <td>Rosetta Cammeniti, Rosetta Rosie Cammeniti is ...</td>\n",
+       "      <td>321</td>\n",
+       "      <td>Rosetta Cammeniti, Rosetta Rosie Cammeniti is ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Spy Muppets: License to Croak</td>\n",
+       "      <td>Spy Muppets: License to Croak, Spy Muppets: Li...</td>\n",
+       "      <td>164</td>\n",
+       "      <td>Spy Muppets: License to Croak, Spy Muppets: Li...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fame in the 20th Century</td>\n",
+       "      <td>Fame in the 20th Century, Fame in the 20th Cen...</td>\n",
+       "      <td>591</td>\n",
+       "      <td>Fame in the 20th Century, Fame in the 20th Cen...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Becca Hayton</td>\n",
+       "      <td>Becca Hayton, Becca Dean also Hayton is a fict...</td>\n",
+       "      <td>271</td>\n",
+       "      <td>Becca Hayton, Becca Dean also Hayton is a fict...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           title  \\\n",
+       "0      Climate change and cities   \n",
+       "1              Rosetta Cammeniti   \n",
+       "2  Spy Muppets: License to Croak   \n",
+       "3       Fame in the 20th Century   \n",
+       "4                   Becca Hayton   \n",
+       "\n",
+       "                                             summary related  \\\n",
+       "0  Climate change and cities are deeply connected...     401   \n",
+       "1  Rosetta Cammeniti, Rosetta Rosie Cammeniti is ...     321   \n",
+       "2  Spy Muppets: License to Croak, Spy Muppets: Li...     164   \n",
+       "3  Fame in the 20th Century, Fame in the 20th Cen...     591   \n",
+       "4  Becca Hayton, Becca Dean also Hayton is a fict...     271   \n",
+       "\n",
+       "                                       summary_short  \\\n",
+       "0  Climate change and cities are deeply connected...   \n",
+       "1  Rosetta Cammeniti, Rosetta Rosie Cammeniti is ...   \n",
+       "2  Spy Muppets: License to Croak, Spy Muppets: Li...   \n",
+       "3  Fame in the 20th Century, Fame in the 20th Cen...   \n",
+       "4  Becca Hayton, Becca Dean also Hayton is a fict...   \n",
+       "\n",
+       "                                       summary_clean  point_value  \n",
+       "0  Moreover because of processes that create clim...            4  \n",
+       "1                                                NaN            1  \n",
+       "2                                                NaN            1  \n",
+       "3                                                NaN            1  \n",
+       "4                                                NaN            1  "
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now save the df as a json file\n",
+    "card_deck = df.to_dict('records')\n",
+    "with open(\"ppn_deck.json\", \"w\") as write_file:\n",
+    "    json.dump(card_deck, write_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
